# prism-sync

./: .dockerignore  .gitignore  AGENTS.md  ARCHITECTURE.md  CHANGELOG.md  CLA.md  CLAUDE.md  Cargo.toml  Dockerfile  LICENSE-APACHE  LICENSE-MIT  NOTICE  README.md  SECURITY.md  deny.toml  docker-compose.yml  flutter_rust_bridge.yaml  justfile  litestream.yml  schema.json
.cargo/: config.toml
crates/prism-sync-bench/: Cargo.toml
crates/prism-sync-bench/src/: client.rs  main.rs  relay.rs  stats.rs
crates/prism-sync-bench/src/scenarios/: mixed.rs  mod.rs  sync_bench.rs  ws_ramp.rs
crates/prism-sync-core/: Cargo.toml  README.md
crates/prism-sync-core/benches/: batch_bench.rs
crates/prism-sync-core/src/: batch_signature.rs  client.rs  clock_drift.rs  crdt_change.rs  debug_log.rs  device_registry.rs  ephemeral.rs  epoch.rs  error.rs  events.rs  hlc.rs  lib.rs  node_id.rs  op_emitter.rs  pruning.rs  recovery.rs  registry_publish.rs  runtime.rs  runtime_keys.rs  schema.rs  secure_store.rs  snapshot_limits.rs  sync_aad.rs  sync_service.rs  syncable_entity.rs
crates/prism-sync-core/src/bootstrap/: ceremony.rs  confirmation.rs  encrypted_envelope.rs  handshake.rs  integration_test.rs  key_schedule.rs  mod.rs  pairing_models.rs  pairing_transcript.rs  prekey_store.rs  sas_words.rs  sharing_identity.rs  sharing_integration_test.rs  sharing_models.rs  sharing_recipient.rs  sharing_sender.rs  sharing_transcript.rs  sharing_trust.rs  transcript.rs
crates/prism-sync-core/src/engine/: merge.rs  mod.rs  pull_failure.rs  state.rs
crates/prism-sync-core/src/pairing/: mod.rs  models.rs  sas.rs  service.rs
crates/prism-sync-core/src/relay/: mock.rs  mock_sharing_relay.rs  mod.rs  pairing_relay.rs  server_relay.rs  sharing_relay.rs  traits.rs  websocket.rs
crates/prism-sync-core/src/storage/: error.rs  migrations.rs  mod.rs  rusqlite_storage.rs  snapshot_format.rs  traits.rs  types.rs
crates/prism-sync-core/tests/: bootstrap_existing_state_tests.rs  conflict_resolution_tests.rs  consumer_api.rs  crdt_properties.rs  engine_integration.rs  epoch_e2e.rs  log_lineage_tests.rs  pairing_failures.rs  pairing_mitm_downgrade_harness.rs  pruning_tombstone_tests.rs  registry_authority_harness.rs  registry_verification_tests.rs  retry_loop.rs  snapshot_ack_tests.rs  snapshot_atomicity_harness.rs  snapshot_bootstrap_tests.rs  snapshot_expiry_tests.rs  snapshot_tests.rs  snapshot_upload_tests.rs  storage_error_tests.rs  storage_indexes.rs  verify_credentials.rs
crates/prism-sync-core/tests/common/: mod.rs
crates/prism-sync-crypto/: Cargo.toml  README.md
crates/prism-sync-crypto/benches/: hybrid_sig_bench.rs
crates/prism-sync-crypto/fuzz/: Cargo.toml
crates/prism-sync-crypto/fuzz/fuzz_targets/: decrypt_fuzz.rs  secretbox_unwrap_fuzz.rs  verify_ed25519_fuzz.rs
crates/prism-sync-crypto/src/: aead.rs  device_identity.rs  error.rs  hex.rs  kdf.rs  key_hierarchy.rs  lib.rs  mnemonic.rs
crates/prism-sync-crypto/src/pq/: continuity_proof.rs  hybrid_kem.rs  mod.rs  models.rs
crates/prism-sync-crypto/tests/: cross_language_vectors.rs  key_lifecycle.rs
crates/prism-sync-ffi/: Cargo.toml  README.md  rust-toolchain.toml
crates/prism-sync-ffi/src/: api.rs  frb_generated.rs  lib.rs
crates/prism-sync-ffi/tests/: basic_ffi.rs  registration_rollback.rs  verify_mnemonic_pin.rs
crates/prism-sync-relay/: Cargo.toml  README.md
crates/prism-sync-relay/examples/: test_relay.rs
crates/prism-sync-relay/src/: apple_attestation.rs  attestation.rs  auth.rs  cleanup.rs  config.rs  db.rs  errors.rs  lib.rs  main.rs  registration_binding.rs  snapshot_limits.rs  state.rs
crates/prism-sync-relay/src/routes/: device_messages.rs  devices.rs  gifs.rs  media.rs  metrics.rs  mod.rs  pairing.rs  register.rs  registry.rs  session.rs  sharing.rs  sync.rs  ws.rs
crates/prism-sync-relay/tests/: e2e_hybrid_sync_tests.rs  e2e_sync.rs  relay_batch_tests.rs  relay_device_lifecycle_tests.rs  relay_device_message_tests.rs  relay_gif_tests.rs  relay_grace_key_tests.rs  relay_media_tests.rs  relay_metrics_tests.rs  relay_pairing_tests.rs  relay_registration_tests.rs  relay_rotate_ml_dsa_tests.rs  relay_sharing_tests.rs  relay_snapshot_tests.rs  relay_ws_tests.rs
crates/prism-sync-relay/tests/common/: mod.rs
dart/: melos.yaml
docs/: sync-pairing-protocol-contract.md
self-host/: Dockerfile  SELF-HOSTING.md  docker-compose.yml
self-host/kubernetes/: README.md  configmap.yaml  deployment.yaml  ingress.yaml  pvc.yaml  secret.yaml  service.yaml
