[workspace]
resolver = "2"
members = [
    "crates/prism-sync-crypto",
    "crates/prism-sync-core",
    "crates/prism-sync-ffi",
    "crates/prism-sync-relay",
    "crates/prism-sync-bench",
]

[workspace.package]
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://github.com/user/prism-sync"
