[package]
name = "prism-sync-bench"
version = "0.1.0"
edition.workspace = true
license.workspace = true
description = "Load test and benchmarking tool for the prism-sync relay server"

[[bin]]
name = "prism-sync-bench"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
reqwest = { version = "0.12", features = ["json"] }
tokio-tungstenite = { version = "0.24", features = ["native-tls"] }
futures = "0.3"
tokio = { version = "1", features = ["full"] }
ed25519-dalek = { version = "2", features = ["rand_core"] }
rand = "0.8"
hex = "0.4"
base64 = "0.22"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4"] }
hdrhistogram = "7"
humantime = "2"
anyhow = "1"
prism-sync-relay = { path = "../prism-sync-relay" }
axum = "0.8"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
