[package]
name = "prism-sync-bench"
version = "0.1.0"
edition.workspace = true
license.workspace = true
description = "Load test and benchmarking tool for the prism-sync relay server"

[[bin]]
name = "prism-sync-bench"
path = "src/main.rs"

[dependencies]
clap = { workspace = true }
reqwest = { workspace = true, features = ["json"] }
tokio-tungstenite = { workspace = true, features = ["native-tls"] }
futures = { workspace = true }
tokio = { workspace = true, features = ["full"] }
ed25519-dalek = { workspace = true }
rand = { workspace = true }
hex = { workspace = true }
base64 = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
hdrhistogram = { workspace = true }
humantime = { workspace = true }
anyhow = { workspace = true }
prism-sync-relay = { workspace = true }
axum = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

[lints]
workspace = true
