[package]
name = "prism-sync-core"
version = "0.1.0"
edition.workspace = true
license.workspace = true
description = "CRDT primitives, sync storage, and op emission for prism-sync"

[dependencies]
prism-sync-crypto = { path = "../prism-sync-crypto" }
rusqlite = { version = "0.31", features = ["bundled-sqlcipher-vendored-openssl"] }
rusqlite_migration = "1"
tokio = { version = "1", features = ["rt-multi-thread", "sync", "time", "macros"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4"] }
tracing = "0.1"
thiserror = "2"
chrono = { version = "0.4", features = ["serde"] }
base64 = "0.22"
hex = "0.4"
async-trait = "0.1"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
tokio-tungstenite = { version = "0.24", features = ["rustls-tls-webpki-roots"] }
rustls = { version = "0.23", default-features = false, features = ["ring", "tls12"] }
futures-util = "0.3"
tokio-stream = { version = "0.1", features = ["sync"] }
sha2 = "0.10"
hmac = "0.12"
ed25519-dalek = { version = "2", features = ["rand_core"] }
rand = "0.8"
zeroize = "1"
rand_core = { version = "0.10", default-features = false }
ml-dsa = { version = "0.1.0-rc.8", features = ["zeroize"] }
zstd = "0.13"
getrandom = { version = "0.4", features = ["sys_rng"] }

[dev-dependencies]
tokio = { version = "1", features = ["rt", "macros"] }
