[package]
name = "prism-sync-core"
version = "0.1.0"
edition.workspace = true
license.workspace = true
description = "CRDT primitives, sync storage, and op emission for prism-sync"

[dependencies]
prism-sync-crypto = { workspace = true }
rusqlite = { workspace = true, features = ["bundled-sqlcipher-vendored-openssl"] }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
tracing = { workspace = true, features = ["release_max_level_info"] }
thiserror = { workspace = true }
chrono = { workspace = true }
base64 = { workspace = true }
hex = { workspace = true }
async-trait = { workspace = true }
reqwest = { workspace = true, features = ["json", "rustls-tls", "stream"] }
tokio-tungstenite = { workspace = true, features = ["rustls-tls-webpki-roots"] }
rustls = { workspace = true }
futures-util = { workspace = true }
tokio-stream = { workspace = true }
sha2 = { workspace = true }
hmac = { workspace = true }
ed25519-dalek = { workspace = true }
rand = { workspace = true }
zeroize = { workspace = true }
rand_core = { workspace = true }
ml-dsa = { workspace = true }
zstd = { workspace = true }
getrandom = { workspace = true }

[lints]
workspace = true

[dev-dependencies]
prism-sync-crypto = { workspace = true, features = ["legacy-hybrid-v2"] }
tokio = { workspace = true, features = ["rt", "macros", "test-util"] }
criterion = { workspace = true }
proptest = "1"

[[bench]]
name = "batch_bench"
harness = false
