[package]
name = "prism-sync-crypto"
version = "0.1.0"
edition.workspace = true
license.workspace = true
description = "Cryptographic primitives for prism-sync: AEAD, KDF, key hierarchy, BIP39"

[dependencies]
chacha20poly1305 = "0.10"
crypto_secretbox = "0.1"
argon2 = "0.5"
hkdf = "0.12"
sha2 = "0.10"
x25519-dalek = { version = "2", features = ["static_secrets"] }
ed25519-dalek = { version = "2", features = ["rand_core"] }
bip39 = { version = "2", features = ["rand"] }
zeroize = { version = "1", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4"] }
rand = "0.8"
thiserror = "2"
hex = "0.4"

[dev-dependencies]
