[package]
name = "prism-sync-crypto"
version = "0.1.0"
edition.workspace = true
license.workspace = true
description = "Cryptographic primitives for prism-sync: AEAD, KDF, key hierarchy, BIP39"

[dependencies]
chacha20poly1305 = "0.10"
crypto_secretbox = "0.1"
argon2 = "0.5"
hkdf = "0.12"
sha2 = "0.10"
x25519-dalek = { version = "2", features = ["static_secrets"] }
ed25519-dalek = { version = "2", features = ["rand_core"] }
bip39 = { version = "2", features = ["rand"] }
zeroize = { version = "1", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4"] }
rand = "0.8"
rand_chacha = "0.3"
rand_core = { version = "0.10", default-features = false }
thiserror = "2"
hex = "0.4"
hybrid-array = "0.2"

# Post-quantum cryptography (RustCrypto ecosystem)
# SECURITY: PQ crate pins verified 2026-04-08. All versions are latest available.
# x-wing =0.1.0-rc.0, ml-kem 0.3.0-rc.2, ml-dsa 0.1.0-rc.8.
# Do not update without running cross-language vector tests:
#   cargo test -p prism-sync-crypto --test cross_language_vectors -- --ignored
ml-kem = { version = "0.3.0-rc.2", features = ["zeroize"] }
ml-dsa = { version = "0.1.0-rc.8", features = ["zeroize", "rand_core"] }
x-wing = { version = "=0.1.0-rc.0", features = ["zeroize"] }

[dev-dependencies]
getrandom = { version = "0.4", features = ["sys_rng"] }
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "hybrid_sig_bench"
harness = false
