[package]
name = "prism-sync-crypto"
version = "0.1.0"
edition.workspace = true
license.workspace = true
description = "Cryptographic primitives for prism-sync: AEAD, KDF, key hierarchy, BIP39"

[dependencies]
chacha20poly1305 = { workspace = true }
crypto_secretbox = { workspace = true }
argon2 = { workspace = true }
hkdf = { workspace = true }
sha2 = { workspace = true }
x25519-dalek = { workspace = true }
ed25519-dalek = { workspace = true }
bip39 = { workspace = true }
zeroize = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
rand = { workspace = true }
rand_chacha = { workspace = true }
rand_core = { workspace = true }
thiserror = { workspace = true }
hex = { workspace = true }
hybrid-array = { workspace = true }

# Post-quantum cryptography (RustCrypto ecosystem)
# SECURITY: PQ crate pins verified 2026-04-08. All versions are latest available.
# x-wing =0.1.0-rc.0, ml-kem 0.3.0-rc.2, ml-dsa 0.1.0-rc.8.
# Do not update without running cross-language vector tests:
#   cargo test -p prism-sync-crypto --test cross_language_vectors -- --ignored
ml-kem = { workspace = true }
ml-dsa = { workspace = true }
x-wing = { workspace = true }

[lints]
workspace = true

[dev-dependencies]
getrandom = { workspace = true }
criterion = { workspace = true }

[[bench]]
name = "hybrid_sig_bench"
harness = false
