[package]
name = "prism_sync_ffi"
version = "0.1.0"
edition.workspace = true
license.workspace = true
description = "FFI layer for prism-sync, bridging to Dart/Flutter via flutter_rust_bridge"

[lib]
name = "prism_sync_ffi"
crate-type = ["cdylib", "staticlib", "rlib"]

[dependencies]
prism-sync-core = { path = "../prism-sync-core" }
prism-sync-crypto = { path = "../prism-sync-crypto" }
flutter_rust_bridge = "=2.11.1"
tokio = { version = "1", features = ["rt-multi-thread", "sync"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rusqlite = { version = "0.31", features = ["bundled-sqlcipher-vendored-openssl"] }
base64 = "0.22"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json"] }
zeroize = "1"

[dev-dependencies]
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
