[package]
name = "prism_sync_ffi"
version = "0.1.0"
edition.workspace = true
license.workspace = true
description = "FFI layer for prism-sync, bridging to Dart/Flutter via flutter_rust_bridge"

[lib]
name = "prism_sync_ffi"
crate-type = ["cdylib", "staticlib", "rlib"]

[dependencies]
prism-sync-core = { workspace = true }
prism-sync-crypto = { workspace = true }
flutter_rust_bridge = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
rusqlite = { workspace = true, features = ["bundled-sqlcipher-vendored-openssl"] }
base64 = { workspace = true }
hex = { workspace = true }
reqwest = { workspace = true, features = ["rustls-tls", "json"] }
sha2 = { workspace = true }
zeroize = { workspace = true }
chrono = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

[lints]
workspace = true

[dev-dependencies]
tokio = { workspace = true }
