[package]
name = "prism_sync_ffi"
version = "0.1.1"
edition.workspace = true
license.workspace = true
description = "FFI layer for prism-sync, bridging to Dart/Flutter via flutter_rust_bridge"

[lib]
name = "prism_sync_ffi"
crate-type = ["cdylib", "staticlib", "rlib"]

[features]
default = []
# Permit cleartext (http://) transport to a NON-localhost relay when the caller
# passes `allow_insecure = true`. OFF by default so release builds physically
# cannot accept a cleartext non-localhost relay no matter what the runtime flag
# says. `http://localhost` / `ws://localhost` stay permitted without this
# feature (loopback dev + the FFI test harness rely on it).
insecure-transport-dev = []

[dependencies]
prism-sync-core = { workspace = true }
prism-sync-crypto = { workspace = true }
flutter_rust_bridge = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
rusqlite = { workspace = true, features = ["bundled-sqlcipher-vendored-openssl"] }
base64 = { workspace = true }
hex = { workspace = true }
reqwest = { workspace = true, features = ["rustls-tls", "json"] }
sha2 = { workspace = true }
image = { workspace = true }
zeroize = { workspace = true }
chrono = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

[lints]
workspace = true

[dev-dependencies]
tokio = { workspace = true }
axum = { workspace = true }
