[package]
name = "prism-sync-relay"
version = "0.1.0"
edition.workspace = true
license.workspace = true
description = "V2 relay server for prism-sync encrypted CRDT sync"

[[bin]]
name = "prism-sync-relay"
path = "src/main.rs"

[features]
test-helpers = []

[dependencies]
axum = { workspace = true, features = ["ws"] }
axum-extra = { workspace = true }
tokio = { workspace = true, features = ["full"] }
tower = { workspace = true }
tower-http = { workspace = true }
anyhow = { workspace = true }
rusqlite = { workspace = true, features = ["bundled"] }
ed25519-dalek = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
futures = { workspace = true }
base64 = { workspace = true }
hex = { workspace = true }
sha2 = { workspace = true }
rand = { workspace = true }
thiserror = { workspace = true }
reqwest = { workspace = true, features = ["rustls-tls"] }
x509-parser = { workspace = true }
simple_asn1 = { workspace = true }
num-traits = { workspace = true }
ciborium = { workspace = true }
subtle = { workspace = true }
tempfile = { workspace = true }
tokio-util = { workspace = true }
prism-sync-crypto = { workspace = true }

[lints]
workspace = true

[dev-dependencies]
reqwest = { workspace = true, features = ["json"] }
tokio-tungstenite = { workspace = true }
prism-sync-core = { workspace = true }
rcgen = { workspace = true }
async-trait = { workspace = true }
getrandom = { workspace = true }
zeroize = { workspace = true }
